lab1/Test/L1-A-12-27.output
Error Type A at Line 8
Error Type A at Line 15
Error Type A at Line 22
Error Type B at Line 33
Error Type B at Line 54
Error Type B at Line 62
