lab1/Test/L1-A-12-27.cmm
float ;
struct GhXhT4dBNqr7L8l_ ;
int ;
struct {
  int iJtb1e9YG8hhNTLmUn ;
}tqpGn1JNjOOb_97V ( ) {
}
int frN3Z , Kfb2mw8 ~[ 492600945 ] 

;
struct Qmp ;
int ;
struct G {
};
struct '{
};
int ;
int ;
struct Nih ;
int ww8NtsR883cP_ ( int w8uokljm ) {
  int lLU2sRP ;
  int cIfPg56qe %;
  int C7 , fx__AKrBlWMMM7 = oneNogLxx5K7muuS ;
  if ( KM7yr4SEjnTvq_Vx96 )   while ( ZEuAKBkSO7qWn_ 
    ) {
    q5LKZUMrk0 ;
    if ( uYWW )     NfMDmanre ;
else     RyaT0KtUprwcW ;

    return XpS0kj2HiLj85YpffNex ;
  }

  DKsAOgPX5AnWdggFO != FD + ! ! G2aYg3 ( = m9oH_qXDukLYpt3 
    = iPSHYihmmJu4ZB7BOAqZ = RJ || AyFqgQBA && md_kjvQnJ0cT 
    < AwiHS8FPAxYVgM [ wa9E2jxVYAx0ewKA && kPgjrFnvAL4g5yqgCzb 
    - - jPwKErc ( PMrgBeejzH6 , U , J1jgBL || fcECSRaFMQX8zV6 
    >= wLnY_m6 * vT7IdL8Fl6jjh [ UMDoNkFRKEBAjE = DjhD9EqB 
    > iqP1STwKTZ3E * ( heB2EjpVtTyS2rBE == HoXvziWejAEQKg9 
    ) * - 1098823556.1989591605 <= - 1476073856 ] . LXweTnqgxpHPIt60yqtd 
    ) ] / vszGeGklj5qse ) * - u0v5vrVPGVyvfcFMN ( ) . 
    Swr9T_xRmHM7VLrqR8eS ;
}
int ivL2KJXfWZPfQYgZfh ( ) {
  fgUM0Bz4PiGm ;
  L87w6tqvHctx ;
  XXB9C ;
{
    _EoXHQBmiojtCGahut47 ;
{
    }  }}
int Pm374P0 ( int v9Xs9 , int mBsZ9G_LJQhJ8 ) {
}
int ;
int ZSH7yEK4S1xMI4bj2k ( {
}
int g8FPv1YcZ3UYZ ( ) {
  Zhj1FnIHu ;
  if ( NeSXRlXO6eSScn )   NSjutkLpxFNQ04t ;
else   if ( YtT0G )   ZRYT 


}
int ;
